--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -12,7 +12,7 @@
 
     <main>
       <div class="card" data-id="1"><p>Prince</p>
-        <button data-trainer-id="1">Add Pokemon</button>
+        <button class = "add-button" data-trainer-id="1">Add Pokemon</button>
         <ul>
           <li>Jacey (Kakuna) <button class="release" data-pokemon-id="140">Release</button></li>
           <li>Zachariah (Ditto) <button class="release" data-pokemon-id="141">Release</button></li>
